# Agentic-AI

./: .gitignore  README.md  pyproject.toml  rag.ipynb
Assignment 1 (RAG)/: RAG_Assignment1_.ipynb
Lab1_Finetuning/: README.md
Lab2_Chunking_Method/: README.md
Lab_Task/: Fine_tuning_Lab_task1.ipynb  README.md
langchain prompting/: Multi_Modal_RAG.ipynb  chunks_export.json  langchain.ipynb
