[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-nvidia-ai-endpoints>=1.0.3",
    "langchain-openai>=1.1.10",
    "streamlit>=1.54.0",
    "unstructured[all-docs]>=0.21.5",
]
